--- a/vecros-final/src/App.css
+++ b/vecros-final/src/App.css
@@ -36,3 +36,15 @@
     transform: rotate(360deg);
   }
 }
+
+
+footer{
+    
+  background-color: rgb(62, 54, 54);
+  padding: 2rem;
+  text-align: center;
+  margin-top: auto;
+  border-top-right-radius: 2rem ; 
+ 
+
+}
